# storfox-framework

./: README.md  pyproject.toml
src/storfox_framework/: __init__.py  application.py  configuration.py  container.py  database.py  grpc.py  repository.py  service.py  test.py  value_object.py
