[tool.poetry]
name = "storfox-framework"
version = "0.1.0"
description = ""
authors = ["Bekhzod Tillakhanov <bekhzod.tillakhanov@gmail.com>"]
packages = [
    { include = "storfox_framework", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
grpclib = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
